<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:paddingTop="80dp"
                    android:background="@mipmap/register_header_bg"
                    app:layout_collapseMode="parallax" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onUploadImage"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/my_record_icon" />

                </RelativeLayout>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingTop="24dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelId"
                        android:imeOptions="actionNext"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelName"
                        android:imeOptions="actionNext"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelCity"
                        android:imeOptions="actionNext"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelContact"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutBlood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtBlood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelBloodGroup"
                        android:imeOptions="actionNext"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutEmerg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtEmerg1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:hint="@string/labelEmergency1"
                        android:inputType="phone"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutEmerg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtEmerg2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelEmergency2"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutAllergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtAllergy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelAllergy"
                        android:imeOptions="actionNext"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutIllness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/editTextColor">

                    <EditText
                        android:id="@+id/edtIllness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelCurrentIlness"
                        android:imeOptions="actionGo"
                        android:textColor="@color/Black" />

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@mipmap/login_btn"
                    android:onClick="onNextClick"
                    android:text="@string/labelNext"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/White"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>