<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/header_layout">

        </include>
    </LinearLayout>

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutAutoCmpTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/editTextColor">

                <com.health.gounihealth.utils.ClearableAutoCompleteTextView
                    android:id="@+id/autoCompleteLocationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableLeft="@drawable/city_icon"
                    android:hint="@string/searchKeyHint"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <requestFocus />
                </com.health.gounihealth.utils.ClearableAutoCompleteTextView>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerICUType"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="bottom"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:spinnerMode="dialog"
                android:text="@string/labelHintICU"
                android:textColor="@color/Black" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn"
                android:text="@string/labelSearch"
                android:textColor="@color/White"
                android:textSize="18sp" />

        </LinearLayout>
   <!-- </ScrollView>-->
</LinearLayout>
